Fixes spacing when printing cv

--- a/static/styles/cv.scss
+++ b/static/styles/cv.scss
@@ -38,7 +38,7 @@ main {
 }
 
 section {
-  margin: 5px 10px;
+  margin: 0 10px;
   /* display: inline-block; */
   max-width: 45vw;
   /* vertical-align: top; */
